# optimization-library

./: CMakeLists.txt  README.md
include/: differential_evolution.h
src/: differential_evolution.c
